--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -1,31 +1,86 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-  font-size: 14px;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
-body{    
+body {
     background-color: #f4f4fc;
 }
-header{
+/* solo contiene la imagen class logo_a*/
+header {
     display: flex;
     width: 100%;
     height: 70px;
 }
-.logo_a{
+
+/* Centrar y darle animacion de rotacion al logo de alura "a"*/
+.logo_a {
     margin: 10px auto;
-    animation:rotate-center 1s 1;    
-    animation-delay: 3s; /* retrasa la animación 5 segundos */    
-} 
-.logo_a:hover{   
-    transform: rotate(0);    
-    animation:rotate-center 1s infinite;
+    animation: rotate-center 1s 1;
+    animation-delay: 3s;
 }
-@keyframes rotate-center{
-    0%{transform:rotate(0);}    
-    100%{transform:rotate(360deg);}
+.logo_a:hover {
+    transform: rotate(0);
+    animation: rotate-center 1s infinite;
+}
+@keyframes rotate-center {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* darle estilo dinamico a la caja de texto input*/
+.contenedor_caja_texto1 {
+    position: relative;
+    width: 20rem;
+    height: 3rem;
+    margin-left: 20px;
+}
+.cont_caja1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #e1e5ee;
+    border-radius: 0.5rem;
+    color: #000000;
+    outline: none;
+    padding: 1.25rem;
+    background: white;
+}
+/* Change border when input focus*/
+.cont_caja1:hover {
+    border-color: #b3cfd8;
+}
+.cont_caja1:focus {
+    border-color: #5f8aa7;
+}
+/* crear el label dentro de la caja de texto*/
+.label_caja1 {
+    position: absolute;
+    left: 1rem;
+    top: 0.8rem;
+    padding: 0 0.5rem;
+    color: #726e6e;
+    cursor: text;
+    transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+    background-color: #ffffff;
+    border-radius: 5px;
+}
+/*Cuando el curosor este en la caja de texto, reducir el tamaño de la etiqueta y mover hacia arriba
+Mantener el estado de la etiqueta cuando el contenido está en el campo de entrada*/
+.cont_caja1:focus ~ .label_caja1,
+.cont_caja1:not(:placeholder-shown).cont_caja1:not(:focus) ~ .label_caja1 {
+    top: -0.5rem;
+    font-size: 0.75rem;
+    left: 0.9rem;
 }
