--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -56,6 +56,14 @@ header {
     }
 }
 
+main {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 90%;
+    justify-content: space-between;
+}
+
 /* darle estilo dinamico a la caja de texto input*/
 .contenedor_caja_texto1 {
     position: relative;
