--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -2,7 +2,7 @@
 *::before,
 *::after {
     box-sizing: border-box;
-    font-family: "Inter", sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -56,7 +56,7 @@ header {
     }
 }
 
-.seccion_1 {
+.cuerpo_principal {
     position: relative;
     display: flex;
     width: 100%;
@@ -111,4 +111,76 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
     top: -0.5rem;
     font-size: 0.75rem;
     left: 0.9rem;
+}
+
+/* RESPONSIVE */
+/* For mobile phones: */
+[class*='col-'] {
+    width: 100%;
+}
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {
+        width: 10%;
+    }
+    .col-s-2 {
+        width: 20%;
+    }
+    .col-s-3 {
+        width: 30%;
+    }
+    .col-s-4 {
+        width: 40%;
+    }
+    .col-s-5 {
+        width: 50%;
+    }
+    .col-s-6 {
+        width: 60%;
+    }
+    .col-s-7 {
+        width: 70%;
+    }
+    .col-s-8 {
+        width: 80%;
+    }
+    .col-s-9 {
+        width: 90%;
+    }
+    .col-s-10 {
+        width: 100%;
+    }
+}
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {
+        width: 10%;
+    }
+    .col-2 {
+        width: 20%;
+    }
+    .col-3 {
+        width: 30%;
+    }
+    .col-4 {
+        width: 40%;
+    }
+    .col-5 {
+        width: 50%;
+    }
+    .col-6 {
+        width: 60%;
+    }
+    .col-7 {
+        width: 70%;
+    }
+    .col-8 {
+        width: 80%;
+    }
+    .col-9 {
+        width: 90%;
+    }
+    .col-10 {
+        width: 100%;
+    }
 }
