--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -7,6 +7,13 @@
     margin: 0;
     padding: 0;
 }
+/* Definir la orientacion de las clases col- */
+[class*='col-'] {
+    float: left;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 body {
     background-color: #f4f4fc;
 }
@@ -16,12 +23,12 @@ header {
     position: relative;
     display: grid;
     width: 100%;
-    height: 80px;
+    height: 100px;
     padding: 20px 10px;
 }
 .text_titulo {
-    margin-top: 4px;
-    margin-left: 20px;
+    margin-top: 12px;
+    margin-left: 7.5%;
     font-size: 1.6rem;
     color: #41667e;
     animation: text-focus-in 1.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
@@ -42,7 +49,7 @@ header {
 .logo_a {
     position: absolute;
     justify-self: center;
-    margin-top: 13px;
+    margin-top: 22px;
     width: 2rem;
     animation: rotacion 1s 1 3s;
     transition: 0.8s linear 0s;
@@ -61,20 +68,18 @@ header {
     display: flex;
     width: 100%;
     height: 90%;
-    justify-content: space-between;
 }
 
+.seccion_1 {
+    padding-left: 8%;
+    padding-right: 5%;
+}
 /* darle estilo dinamico a la caja de texto input*/
 .contenedor_caja_texto1 {
-    position: absolute;
-    width: 20rem;
+    position: relative;
     height: 3rem;
-    margin-left: 20px;
 }
 .caja_texto1 {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     border: 2px solid #e1e5ee;
@@ -111,6 +116,10 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
     top: -0.5rem;
     font-size: 0.75rem;
     left: 0.9rem;
+}
+
+.seccion_2 {
+    position: relative;
 }
 
 /* RESPONSIVE */
