--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -67,7 +67,7 @@ header {
     position: relative;
     display: flex;
     width: 100%;
-    height: 90%;
+    height: 100%;
 }
 
 .seccion_1 {
@@ -141,8 +141,10 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
 .contenedor_seccion_2 {
     text-align: center;
     margin-right: 20px;
+    height: 100%;
     border: 2px solid #5f8aa7;
     border-radius: 10px;
+    padding: 20px;
 }
 .contenedor_dibujos_hackers {
     display: flex;
