--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -15,6 +15,7 @@
 }
 
 body {
+    position: relative;
     background-color: #f4f4fc;
 }
 
@@ -28,7 +29,7 @@ header {
 }
 .text_titulo {
     margin-top: 12px;
-    margin-left: 7.5%;
+    margin-left: 4.5%;
     font-size: 1.8rem;
     color: #41667e;
     animation: text-focus-in 1.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
@@ -71,7 +72,8 @@ header {
 }
 
 .seccion_1 {
-    padding-left: 8%;
+    padding-left: 5%;
+    padding-right: 2%;
 }
 /* darle estilo dinamico a la caja de texto input*/
 .contenedor_caja_texto1 {
@@ -115,7 +117,7 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
 .caja_texto1:focus ~ .label_caja_texto1,
 .caja_texto1:not(:placeholder-shown).caja_texto1:not(:focus) ~ .label_caja_texto1 {
     top: -0.5rem;
-    font-size: 0.75rem;
+    font-size: 0.8rem;
     left: 0.9rem;
 }
 
@@ -136,22 +138,26 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
 }
 
 .seccion_2 {
-    padding-left: 4%;
+    padding-right: 5%;
+    padding-left: 2%;
 }
 .contenedor_seccion_2 {
+    display: grid;
+    grid-template-rows: 0.5fr 2.5fr 1fr 1.5fr;
     text-align: center;
-    margin-right: 20px;
-    height: 100%;
-    border: 2px solid #5f8aa7;
-    border-radius: 10px;
-    padding: 20px;
+    align-items: center;
+    height: 480px;
+    border-radius: 1rem;
+    padding: 15px;
+    background-color: #ffffff;
+    box-shadow: 6px 6px 12px #c5c5c5;
+    font-size: 0.2rem;
 }
-.contenedor_dibujos_hackers {
-    display: flex;
-    flex-wrap: wrap;
-}
+
 .contenedor_dibujos_hackers img {
+    grid-row: 2;
     width: 100%;
+    max-width: 320px;
 }
 
 /* RESPONSIVE */
