--- a/Challenger1_encriptador/style_botones.css
+++ b/Challenger1_encriptador/style_botones.css
@@ -5,9 +5,9 @@
     overflow: hidden;
     z-index: 1;
     color: #090909;
-    padding: 0.7em 1.2em;
+    padding: 0.7rem 1.2rem;
     font-size: 1rem;
-    border-radius: 0.5em;
+    border-radius: 0.5rem;
     background: #e8e8e8;
     border: 1px solid #e8e8e8;
     box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
@@ -46,15 +46,15 @@
 }
 .boton_seccion1:hover {
     color: #ffffff;
-    border: 1px solid #009087;
+    border: 1px solid #5f8aa7;
 }
 .boton_seccion1:hover::before {
     top: -35%;
-    background-color: #009087;
+    background-color: #5f8aa7;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 .boton_seccion1:hover::after {
     top: -45%;
-    background-color: #009087;
+    background-color: #5f8aa7;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
