--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -15,21 +15,21 @@
 }
 
 body {
-    position: relative;
     background-color: #f4f4fc;
 }
 
 /* contiene encabezado class text_titulo - imagen: logo_a*/
 header {
     position: relative;
-    display: grid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 100px;
-    padding: 20px 10px;
+    height: 80px;
 }
 .text_titulo {
-    margin-top: 12px;
-    margin-left: 4.5%;
+    position: absolute;
+    left: 5.2%;
     font-size: 1.8rem;
     color: #41667e;
     animation: text-focus-in 1.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
@@ -48,10 +48,7 @@ header {
 
 /* Centrar y darle animacion de rotacion al logo de alura "a"*/
 .logo_a {
-    position: absolute;
-    justify-self: center;
-    margin-top: 22px;
-    width: 2rem;
+    width: 1.8rem;
     animation: rotacion 1s 1 3s;
     transition: 0.8s linear 0s;
 }
@@ -142,10 +139,10 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
     padding-left: 2%;
 }
 .contenedor_seccion_2 {
-    display: grid;
-    grid-template-rows: 0.5fr 2.5fr 1fr 1.5fr;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     text-align: center;
-    align-items: center;
     height: 480px;
     border-radius: 1rem;
     padding: 15px;
@@ -154,8 +151,7 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
     font-size: 0.2rem;
 }
 
-.contenedor_dibujos_hackers img {
-    grid-row: 2;
+.contenedor_dibujo_hacker img {
     width: 100%;
     max-width: 320px;
 }
@@ -230,4 +226,8 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
     .col-10 {
         width: 100%;
     }
+}
+
+.ocultar {
+    display: none;
 }
