--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -143,17 +143,20 @@ Mantener el estado de la etiqueta cuando el contenido está en el campo de entra
 .contenedor_seccion_2 {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     text-align: center;
     height: 100%;
     border-radius: 1rem;
     padding: 15px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     background-color: #ffffff;
     box-shadow: 6px 6px 12px #c5c5c5;
     font-size: 0.2rem;
 }
 .texto_resultado {
     word-break: break-all;
+    font-size: 1.2rem;
 }
 .contenedor_dibujo_hacker img {
     width: 100%;
