--- a/Challenger1_encriptador/style_botones.css
+++ b/Challenger1_encriptador/style_botones.css
@@ -12,6 +12,10 @@ button {
     border: 1px solid #e8e8e8;
     box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
 }
+body.dark button {
+    box-shadow: 6px 6px 12px #000000;
+}
+
 button:active {
     box-shadow: inset 4px 4px 12px #ffffff;
     transform: scale(0.95);
