--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -2,8 +2,6 @@
 *::before,
 *::after {
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-    font-size: 16px;
     margin: 0;
     padding: 0;
 }
@@ -11,6 +9,8 @@
 body {
     background-color: #f4f4fc;
     transition: 0.4s ease all;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
 }
 body.dark {
     background-color: #2e2e2e;
@@ -73,6 +73,7 @@ body.dark .logo_a {
 }
 
 .seccion_1 {
+    font: 1em 'Inter', sans-serif;
     position: relative;
     height: 30rem;
     width: 60%;
@@ -168,9 +169,9 @@ body.dark .alerta img {
 .seccion_2 {
     padding-right: 5%;
     padding-left: 2%;
-    margin-bottom: 5%;
     width: 40%;
     height: 480px;
+    margin-bottom: 1.5%;
 }
 .contenedor_seccion_2 {
     display: flex;
@@ -180,11 +181,10 @@ body.dark .alerta img {
     height: 100%;
     border-radius: 1rem;
     padding: 15px;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-bottom: 15px;
+    padding-top: 15px;
     background-color: #ffffff;
     box-shadow: 6px 6px 12px #c5c5c5;
-    font-size: 0.2rem;
 }
 body.dark .contenedor_seccion_2 {
     background-color: #3a3a3a;
@@ -316,7 +316,7 @@ body.dark .contenedor_dibujo_hacker img {
     .seccion_2 {
         width: 100%;
         padding: 0 5%;
-        height: 26rem;
+        height: 27rem;
     }
     .texto_resultado {
         max-height: 15rem;
