--- a/Challenger1_encriptador/style_social_network.css
+++ b/Challenger1_encriptador/style_social_network.css
@@ -1,19 +1,7 @@
-.flex-center {
+.contenedor_social_network {
     width: 100%;
-    font-size: 0.5rem;
-    min-height: 12vh;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
 }
 
 .icon-3d {
