--- a/Challenger1_encriptador/style.css
+++ b/Challenger1_encriptador/style.css
@@ -91,6 +91,7 @@ body.dark .logo_a {
     width: 100%;
     height: 5.47rem;
     max-height: 350px;
+    font-family: 'Inter', sans-serif;
     resize: none;
     border: 2px solid #e1e5ee;
     border-radius: 0.5rem;
@@ -171,7 +172,6 @@ body.dark .alerta img {
     padding-left: 2%;
     width: 40%;
     height: 480px;
-    margin-bottom: 1.5%;
 }
 .contenedor_seccion_2 {
     display: flex;
@@ -207,6 +207,21 @@ body.dark .contenedor_dibujo_hacker img {
     content: url('imagenes/hacker-friend2.gif');
 }
 
+footer {
+    position: relative;
+    display: flex;
+    margin-top: 0.5rem;
+    padding: 0 5%;
+    justify-content: space-between;
+    align-items: center;
+}
+footer img {
+    width: 2rem;
+}
+body.dark footer img {
+    content: url(imagenes/Logo_angel2.png);
+}
+
 /* llamar elementos desde script.js*/
 /* vibrar el mensaje "ningun mensaje fue encontrado*/
 .sacudir {
@@ -236,22 +251,6 @@ body.dark .contenedor_dibujo_hacker img {
     }
     90% {
         transform: rotate(8deg);
-    }
-}
-
-.transicion_dia_noche {
-    animation: wipe-cinematic-in 1.5s cubic-bezier(0.25, 1, 0.3, 1);
-}
-@keyframes wipe-cinematic-in {
-    0% {
-        clip-path: inset(100% 0 100% 0);
-    }
-    30%,
-    70% {
-        clip-path: inset(10% 0 10% 0);
-    }
-    100% {
-        clip-path: inset(0 0 0 0);
     }
 }
 
@@ -329,7 +328,7 @@ body.dark .contenedor_dibujo_hacker img {
 /* SMART PHONE */
 @media only screen and (max-width: 440px) {
     * {
-        font-size: 13px;
+        font-size: 0.9rem;
         .alerta img {
             width: 15px;
         }
