--- a/HTML5_and_CSS3/2_2style.css
+++ b/HTML5_and_CSS3/2_2style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: 'Montserrat', sans-serif;
+}
 header {
     background-color: rgb(247, 216, 177);
     padding: 20px 0px; /* 20px: top - botton, 0: left - right */
@@ -53,13 +56,13 @@ nav a:hover {
 }
 .productos li:hover h2 {
     /* cambia el tamaño del h2 cuando el mouse pasa por encima del objeto*/
-    font-size: 35px;
+    font-size: 30px;
 }
 .productos li:active {
     border: 4px solid rgb(15, 143, 3);
 }
 .productos h2 {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bold;
 }
 .productos_descripcion {
@@ -74,20 +77,22 @@ nav a:hover {
 footer {
     text-align: center;
     background-color: black;
-    padding: 30px;
+    box-sizing: border-box;
 }
 .copyright {
     color: white;
     font-size: 12px;
-    margin-top: 15px;
+    padding-bottom: 20px;
 }
+
 main {
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
+    padding: 0 10%;
 }
 form {
-    margin: 40px 10%;
+    margin: 40px 0;
 }
 form label,
 form legend {
@@ -124,7 +129,7 @@ form legend {
 }
 
 table {
-    margin: 40px 10%;
+    margin: 40px 0;
 }
 thead {
     background-color: #555555;
@@ -162,10 +167,14 @@ th {
     font-size: 2em;
     padding: 15px 0 20px 0;
 }
-
+.img_utencilios {
+    width: 120px;
+    float: left;
+    margin-right: 15px;
+}
 .principal p {
     text-align: justify;
-    margin: 0 10% 1em 10%;
+    margin-bottom: 1em;
 }
 .principal strong {
     font-weight: bold;
@@ -174,10 +183,53 @@ th {
     font-style: italic;
 }
 
+.mapa {
+    padding: 2em 0;
+    margin-left: -12.5%;
+    margin-right: -12.5%;
+    background: linear-gradient(white, #727272);
+    text-align: center;
+}
+.mapa p {
+    margin-bottom: 1em;
+}
+
+.diferenciales {
+    margin-left: -12.5%;
+    margin-right: -12.5%;
+    background-color: #727272;
+    padding-bottom: 30px;
+}
+.diferenciales .titulo_principal {
+    color: white;
+}
+.contenido_diferenciales {
+    display: flex;
+    width: 640px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+}
+
 .diferenciales ul {
-    margin: 0 10% 1em 10%;
+    width: 40%;
+    margin-bottom: 1em;
+    color: white;
 }
 .diferenciales img {
     width: 60%;
-    margin-left: 10%;
+}
+.diferenciales li {
+    margin-bottom: 10px;
+    line-height: 1.3;
+}
+.diferenciales li:first-child {
+    font-weight: bold;
+}
+.diferenciales li:before {
+    content: '★ ';
+}
+
+.video {
+    width: 560px;
+    margin: 1em auto;
 }
